Better path calculation, Movement object to represent Paths in stretches